--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,4 +42,4 @@ jobs:
     steps:
       - run:
           name: deploy-application
-          command: ssh -o StrictHostKeyChecking=no ubuntu@ec2-13-53-110-39.eu-north-1.compute.amazonaws.com "export SERVER=\"$SERVER\"; export PRIVATE_KEY=\"$PRIVATE_KEY\"; rm -rf ~/SimpleApplication/;git clone https://github.com/DMLFrancis/SimpleApplication.git; source SimpleApplication/deploy.sh"
+          command: ssh -o StrictHostKeyChecking=no ubuntu@ec2-16-16-218-78.eu-north-1.compute.amazonaws.com "export SERVER=\"$SERVER\"; export PRIVATE_KEY=\"$PRIVATE_KEY\"; rm -rf ~/Group/;git clone https://github.com/DMLFrancis/Group.git; source Group/deploy.sh"
